decafParser.py
# Generated from decaf.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class decafParser ( Parser ):

    grammarFileName = "decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'char'", 
                     "'boolean'", "'void'", "'('", "','", "')'", "'if'", 
                     "'else'", "'while'", "'='", "'return'", "'.'", "'-'", 
                     "'!'", "'+'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "'''", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LETTER", "WS", 
                      "NUM", "DIGIT" ]

    RULE_start = 0
    RULE_id_tok = 1
    RULE_declaration = 2
    RULE_varDeclaration = 3
    RULE_structDeclaration = 4
    RULE_varType = 5
    RULE_methodDeclaration = 6
    RULE_methodType = 7
    RULE_parameter = 8
    RULE_parameterType = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_returnStatement = 12
    RULE_location = 13
    RULE_expression = 14
    RULE_methodCall = 15
    RULE_arg = 16
    RULE_op = 17
    RULE_arith_op = 18
    RULE_rel_op = 19
    RULE_eq_op = 20
    RULE_cond_op = 21
    RULE_literal = 22
    RULE_int_literal = 23
    RULE_char_literal = 24
    RULE_bool_literal = 25

    ruleNames =  [ "start", "id_tok", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methodDeclaration", "methodType", "parameter", 
                   "parameterType", "block", "statement", "returnStatement", 
                   "location", "expression", "methodCall", "arg", "op", 
                   "arith_op", "rel_op", "eq_op", "cond_op", "literal", 
                   "int_literal", "char_literal", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    LETTER=39
    WS=40
    NUM=41
    DIGIT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = decafParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(decafParser.T__0)
            self.state = 53
            self.match(decafParser.T__1)
            self.state = 54
            self.match(decafParser.T__2)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 55
                self.declaration()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(decafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_tokContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LETTER(self, i:int=None):
            if i is None:
                return self.getTokens(decafParser.LETTER)
            else:
                return self.getToken(decafParser.LETTER, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(decafParser.DIGIT)
            else:
                return self.getToken(decafParser.DIGIT, i)

        def getRuleIndex(self):
            return decafParser.RULE_id_tok

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tok" ):
                listener.enterId_tok(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tok" ):
                listener.exitId_tok(self)




    def id_tok(self):

        localctx = decafParser.Id_tokContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_id_tok)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(decafParser.LETTER)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    _la = self._input.LA(1)
                    if not(_la==decafParser.LETTER or _la==decafParser.DIGIT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(decafParser.StructDeclarationContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(decafParser.VarDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(decafParser.MethodDeclarationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = decafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.varDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.methodDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(decafParser.VarTypeContext,0)


        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def NUM(self):
            return self.getToken(decafParser.NUM, 0)

        def getRuleIndex(self):
            return decafParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = decafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.varType()
                self.state = 76
                self.id_tok()
                self.state = 77
                self.match(decafParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.varType()
                self.state = 80
                self.id_tok()
                self.state = 81
                self.match(decafParser.T__5)
                self.state = 82
                self.match(decafParser.NUM)
                self.state = 83
                self.match(decafParser.T__6)
                self.state = 84
                self.match(decafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)




    def structDeclaration(self):

        localctx = decafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(decafParser.T__7)
            self.state = 89
            self.id_tok()
            self.state = 90
            self.match(decafParser.T__2)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 91
                self.varDeclaration()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(decafParser.T__3)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==decafParser.T__4:
                self.state = 98
                self.match(decafParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def structDeclaration(self):
            return self.getTypedRuleContext(decafParser.StructDeclarationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)




    def varType(self):

        localctx = decafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(decafParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(decafParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(decafParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(decafParser.T__7)
                self.state = 105
                self.id_tok()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.structDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.match(decafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodType(self):
            return self.getTypedRuleContext(decafParser.MethodTypeContext,0)


        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(decafParser.ParameterContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = decafParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.methodType()
            self.state = 111
            self.id_tok()
            self.state = 112
            self.match(decafParser.T__12)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 113
                self.parameter()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==decafParser.T__13:
                    self.state = 114
                    self.match(decafParser.T__13)
                    self.state = 115
                    self.parameter()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(decafParser.T__14)
            self.state = 127
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_methodType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType" ):
                listener.enterMethodType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType" ):
                listener.exitMethodType(self)




    def methodType(self):

        localctx = decafParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterType(self):
            return self.getTypedRuleContext(decafParser.ParameterTypeContext,0)


        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = decafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.parameterType()
                self.state = 132
                self.id_tok()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.parameterType()
                self.state = 135
                self.id_tok()
                self.state = 136
                self.match(decafParser.T__5)
                self.state = 137
                self.match(decafParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(decafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_parameterType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType" ):
                listener.enterParameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType" ):
                listener.exitParameterType(self)




    def parameterType(self):

        localctx = decafParser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameterType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StatementContext)
            else:
                return self.getTypedRuleContext(decafParser.StatementContext,i)


        def returnStatement(self):
            return self.getTypedRuleContext(decafParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = decafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(decafParser.T__2)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 145
                self.varDeclaration()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__2) | (1 << decafParser.T__4) | (1 << decafParser.T__12) | (1 << decafParser.T__15) | (1 << decafParser.T__17) | (1 << decafParser.T__21) | (1 << decafParser.T__22) | (1 << decafParser.T__35) | (1 << decafParser.T__36) | (1 << decafParser.T__37) | (1 << decafParser.LETTER) | (1 << decafParser.NUM))) != 0):
                self.state = 151
                self.statement()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==decafParser.T__19:
                self.state = 157
                self.returnStatement()


            self.state = 160
            self.match(decafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.BlockContext)
            else:
                return self.getTypedRuleContext(decafParser.BlockContext,i)


        def methodCall(self):
            return self.getTypedRuleContext(decafParser.MethodCallContext,0)


        def location(self):
            return self.getTypedRuleContext(decafParser.LocationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = decafParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(decafParser.T__15)
                self.state = 163
                self.match(decafParser.T__12)
                self.state = 164
                self.expression(0)
                self.state = 165
                self.match(decafParser.T__14)
                self.state = 166
                self.block()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==decafParser.T__16:
                    self.state = 167
                    self.match(decafParser.T__16)
                    self.state = 168
                    self.block()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(decafParser.T__17)
                self.state = 172
                self.match(decafParser.T__12)
                self.state = 173
                self.expression(0)
                self.state = 174
                self.match(decafParser.T__14)
                self.state = 175
                self.block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.methodCall()
                self.state = 178
                self.match(decafParser.T__4)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.location()
                self.state = 182
                self.match(decafParser.T__18)
                self.state = 183
                self.expression(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__12) | (1 << decafParser.T__21) | (1 << decafParser.T__22) | (1 << decafParser.T__35) | (1 << decafParser.T__36) | (1 << decafParser.T__37) | (1 << decafParser.LETTER) | (1 << decafParser.NUM))) != 0):
                    self.state = 185
                    self.expression(0)


                self.state = 188
                self.match(decafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = decafParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(decafParser.T__19)
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__12) | (1 << decafParser.T__21) | (1 << decafParser.T__22) | (1 << decafParser.T__35) | (1 << decafParser.T__36) | (1 << decafParser.T__37) | (1 << decafParser.LETTER) | (1 << decafParser.NUM))) != 0):
                self.state = 192
                self.expression(0)


            self.state = 195
            self.match(decafParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_tok(self):
            return self.getTypedRuleContext(decafParser.Id_tokContext,0)


        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def location(self):
            return self.getTypedRuleContext(decafParser.LocationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_location

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocation" ):
                listener.enterLocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocation" ):
                listener.exitLocation(self)




    def location(self):

        localctx = decafParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_location)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 197
                self.id_tok()
                pass

            elif la_ == 2:
                self.state = 198
                self.id_tok()
                self.state = 199
                self.match(decafParser.T__5)
                self.state = 200
                self.expression(0)
                self.state = 201
                self.match(decafParser.T__6)
                pass


            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 205
                self.match(decafParser.T__20)
                self.state = 206
                self.location()

